______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.213:                                (1.0.0-beta6)

* XINS/Java Common Library:
  - Added the hashCode() and equals() method to the types Date and Timestamp.
  - Fixed the HTTPServiceCaller did not pass the arguments correctly when using
    the GET method.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.212:                                (1.0.0-beta5)

* XINS/Java Server Framework:
  - When an object is added to the data section, a clone of this object is
    added to the element.
  - The class Element now implements the Cloneable interface.
  - Added a test for the AllInOne example.
  - Added a test for the _NoOp meta function.

* XINS/Java Client Framework:
  - The class DataElement now implements the Cloneable interface.
  - If the result has no parameters, getParameters() returns null.
  - If a DataElement has no children or no attributes, null is returned.

* Logdoc:
  - The validation of the Logdoc XML files is now done using the local files
    when the declaration uses 1.0 alpha.

* DTD:
  - Linked DTDs to www.xins.org instead of xins.sourceforge.net.

* Generated build file:
  - Linked the Javadoc to www.xins.org instead of xins.sourceforge.net.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.211:                                (1.0.0-beta4)

* XINS/Java Common Library:
  - Fixed SF.net bug #1051551: Changed HTTPServiceCaller so it now correctly
    recognizes an UnknownHostException and throw an UnknownHostCallException
    instead. This allows fail-over in all situations that involve an 'Unknown
    host' error. Added UnknownHostCallException as subclass of
    ConnectionCallException.
  - Improved tests for HTTP service caller.
  - Improved Javadoc documentation.

* XINS/Java Client Framework: