@@ -1,10 +1,17 @@
 ______________________________________________________________________________
 CHANGES INTRODUCED IN XINS 0.213:                                (1.0.0-beta6)
 
+* XINS/Java Server Framework:
+  - Added tests for _GetSettings, _DiasableFunction, _EnableFunction and
+   _GetFunctionList meta functions.
+
 * XINS/Java Common Library:
   - Added the hashCode() and equals() method to the types Date and Timestamp.
   - Fixed the HTTPServiceCaller did not pass the arguments correctly when using
     the GET method.
+
+* XINS/Java Client Framework:
+  - Added more test using the AllInOne CAPI.
 
 ______________________________________________________________________________
 CHANGES INTRODUCED IN XINS 0.212:                                (1.0.0-beta5)
